kubernetes/pft-be-kyc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pft-be-kyc-svc
  namespace: pft-be-kyc
  labels:
    app: pft-be-kyc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-5000  # Updated port name
      port: 8000
      targetPort: 8000
  selector:
    app: pft-be-kyc
