kubernetes/pft-be-kyc/ingress.yaml

---
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: pft-be-kyc-ing
  namespace: pft-be-kyc
  labels:
    app: pft-be-kyc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: pft-be-kycs-pft-be-kycs-ing-mdw@kubernetescrd  # Corrected middleware reference
spec:
  rules:
  - host: "<hostname>"
    http:
      paths:
      - pathType: Prefix  # Added pathType
        path: /kyc-service
        backend:
          service:
            name: pft-be-kyc-svc
            port:
              number: 8000  # Changed servicePort to number
      - pathType: Prefix  # Added pathType
        path: /static
        backend:
          service:
            name: pft-be-kyc-svc
            port:
              number: 8000  # Changed servicePort to number
